<resources>
    <string name="app_name">MediaShop</string>
    <string name="add_prod">Add Products</string>
    <string name="product_name">Name</string>
    <string name="product_description">Description</string>
    <string name="product_price">Price</string>
    <string name="save">Save</string>
    <string name="product_quantity">Quantity</string>
    <string name="product_pic">Insert a picture</string>
    <string name="product_id">ID</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="pick_pic">Pick a picture</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="welcome_message">Welcome to My App!</string>
    <string name="button_text">Click Me!</string>
    <string name="error_message">An error has occurred.</string>
    <string name="delete_all_cart_items">Delete All Cart Items</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="action_cart">Cart</string>
    <string name="cancel">Cancel</string>
    <string name="edit_product">‎ ‎ ‎ ‎ ‎  Edit Product</string>
    <string name="add_product">‎ ‎ ‎ ‎ ‎  Add Product</string>
    <string name="delete_product">‎ ‎ ‎ ‎ ‎  Delete Product</string>
    <string name="edit_supp">‎ ‎ ‎ ‎ ‎  Edit Supplier</string>
    <string name="add_supp">‎ ‎ ‎ ‎ ‎  Add Supplier</string>
    <string name="delete_supp">‎ ‎ ‎ ‎ ‎  Delete Supplier</string>
    <string name="add_to_cart_description">Add to cart</string>
    <string name="product_saved">Product saved.</string>
    <string name="product_deleted">Product deleted.</string>
    <string name="Save">Save</string>
    <string name="name_hint">Enter name</string>
    <string name="description_hint">Enter description</string>
    <string name="price_hint">Enter price</string>
    <string name="quantity_hint">Enter quantity</string>
    <string name="save_product">Save Product</string>
    <string name="add_product_title">Add Product</string>
    <string name="edit_product_title">Edit Product Title</string>
    <string name="empty_fields_message">Please fill in all the fields</string>
    <string name="confirm_delete_product">Are you sure you want to delete this product?</string>


</resources>