<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/prod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:text="Add products"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:autofillHints="name"
        android:hint="@string/product_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_text_id"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:autofillHints="id"
        android:hint="@string/product_id"
        android:inputType="number" />


    <EditText
        android:id="@+id/edit_text_description"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:autofillHints="description"
        android:hint="@string/product_description"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/edit_text_price"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:autofillHints="price"
        android:hint="@string/product_price"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/edit_text_quantity"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:autofillHints="quantity"
        android:hint="@string/product_quantity"
        android:inputType="number" />

    <Button
        android:id="@+id/btn_picture"
        android:layout_width="match_parent"
        android:layout_height="48dp"

        android:text="@string/product_pic"
         />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="match_parent"
        android:layout_height="109dp"
        app:srcCompat="@drawable/ic_add" />


</LinearLayout>
