<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view"
    >

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="Home"
        />


    <item
        android:id="@+id/suppliers"
        android:icon="@drawable/ic_cart"
        android:title="Suppliers">
        <menu>
            <group>
                <item
                    android:id="@+id/add_supp_option"
                    android:title="@string/add_supp" />
                <item
                    android:id="@+id/drop_supp_option"
                    android:title="@string/delete_supp" />
                <item
                    android:id="@+id/view_suppliers"
                    android:title="     View Suppliers" />
            </group>
        </menu>
    </item>


    <item
        android:id="@+id/products"
        android:checked="true"
        android:title="Products">
        <menu>

            <item
                android:id="@+id/add_product_option"
                android:title="@string/add_product" />
            <item
                android:id="@+id/drop_product_option"
                android:title="@string/delete_product" />
            <item
                android:id="@+id/edit_product_option"
                android:title="@string/edit_product" />

        </menu>
    </item>

    <item
        android:id="@+id/supplies"

        android:title="Transactions">
        <menu>
            <group>
                <item
                    android:id="@+id/add_transaction"
                    android:title="     Add Transaction" />
                <item
                    android:id="@+id/view_transaction"
                    android:title="     View Transactions" />


            </group>
        </menu>
    </item>
    <item
        android:id="@+id/customers"

        android:title="Customers">
        <menu>
            <group>
                <item
                    android:id="@+id/add_customer"
                    android:title="     Add Customers" />
                <item
                    android:id="@+id/del_customer"
                    android:title="     Delete Customers" />
                <item
                    android:id="@+id/view_customers"
                    android:title="     View Customers" />


            </group>
        </menu>
    </item>
    <item
        android:title="Sales">
        <menu>
            <group>
                <item
                    android:id="@+id/view_sales"
                    android:title="     View Sales" />
            </group>
        </menu>
    </item>
</menu>
