<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSuppliersFragment"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/supp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:text="Add suppliers"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_text_name3"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:autofillHints="name"
        android:hint="@string/product_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_text_id3"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:autofillHints="id"
        android:hint="@string/product_id"
        android:inputType="number" />

    <Button
        android:id="@+id/button_save3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />


    <Button
        android:id="@+id/button_query3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="query" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textview3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </ScrollView>




</LinearLayout>