<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCustomerFragment"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add new customers"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <EditText
        android:id="@+id/edit_text_cname"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:autofillHints="name"
        android:hint="@string/product_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_text_csurname"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:autofillHints="surname"
        android:hint="Surname"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_text_cid"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:autofillHints="id"
        android:hint="@string/product_id"
        android:inputType="number" />
    <EditText
        android:id="@+id/edit_text_caddress"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:autofillHints="address"
        android:hint="Address"
        android:inputType="text" />

    <Button
        android:id="@+id/button_csave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />







</LinearLayout>