<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSuppliersLandscFragment"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"

        android:orientation="vertical">

        <TextView
            android:id="@+id/supp1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add new suppliers"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <EditText
        android:id="@+id/edit_text_name3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:autofillHints="name"
        android:hint="@string/product_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_text_id3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:autofillHints="id"
        android:hint="@string/product_id"
        android:inputType="number" />

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/button_save3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />




    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textview3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </ScrollView>




</LinearLayout>